--- a/DemoMVC/Views/Shared/_Header.cshtml
+++ b/DemoMVC/Views/Shared/_Header.cshtml
@@ -10,7 +10,12 @@
                 <a asp-controller="home" asp-action="hello">
                     <i class="fas fa-comments"></i> Bonjour
                 </a>
-            </li>    
+            </li> 
+            <li>
+                <a asp-controller="Movie" asp-action="Index">
+                    <i class="fa fa-list"></i> Tous les films
+                </a>
+            </li>
         </ul>
     </nav>
 </header>
