--- a/DemoMVC/Views/Movie/Index.cshtml
+++ b/DemoMVC/Views/Movie/Index.cshtml
@@ -20,6 +20,7 @@
             <th>Titre</th>
             <th>Description</th>
             <th>Image</th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -29,6 +30,8 @@
                 <td>@movie.OriginalTitle</td>
                 <td>@movie.Overview</td>
                 <td>@movie.PosterPath</td>
+                <td><a asp-action="Details"
+                       asp-route-id="@movie.Id"><i class="fa fa-search"></i></a></td>
             </tr>
         }
     </tbody>
