--- a/DemoMVC/Views/Shared/_Header.cshtml
+++ b/DemoMVC/Views/Shared/_Header.cshtml
@@ -16,6 +16,11 @@
                     <i class="fa fa-list"></i> Tous les films
                 </a>
             </li>
+            <li>
+                <a asp-controller="Contact" asp-action="Index">
+                    formulaire
+                </a>
+            </li>
         </ul>
     </nav>
 </header>
