--- a/DemoMVC/Views/Customer/Index.cshtml
+++ b/DemoMVC/Views/Customer/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿@model List<CustomerIndexViewModel>
 
+<a class="btn btn-dark mb-3" asp-controller="Customer" asp-action="Create"><i class="fa fa-user-plus"></i></a>
 
-<form class="mb-3">
+<form class="mb-3" method="get">
     <div class="d-flex">
         <input class="form-control me-3" type="text" name="Search" value="@ViewBag.Search"/>
         <button class="btn btn-dark btn-sm">Go</button>
@@ -26,7 +27,15 @@
                 <td>@item.LastName</td>
                 <td>@item.FirstName</td>
                 <td>@item.NbOrders</td>
-                <td></td>
+                <td>
+                    <a class="btn btn-sm btn-danger" asp-action="Delete" asp-route-id="@item.Ref">
+                        <i class="fa fa-trash"></i>
+                    </a>
+
+                    <a class="btn btn-sm btn-success" asp-action="Edit" asp-route-id="@item.Ref">
+                        <i class="fa fa-pencil-square"></i>
+                    </a>
+                </td>
             </tr>
         }
     </tbody>
