--- a/DemoMVC/Views/Shared/_Header.cshtml
+++ b/DemoMVC/Views/Shared/_Header.cshtml
@@ -21,6 +21,11 @@
                     <i class="fa fa-envelope"></i> Formulaire
                 </a>
             </li>
+            <li>
+                <a asp-controller="Customer" asp-action="Index">
+                    <i class="fa fa-user"></i> Les Clients
+                </a>
+            </li>
         </ul>
     </nav>
 </header>
