--- a/DemoMVC/Views/Contact/Index.cshtml
+++ b/DemoMVC/Views/Contact/Index.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Index">
+        <form asp-action="Index" method="post" asp-antiforgery="false">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
